<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/abActionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:background="@color/action_bar_color"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/abName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ab_name_marginleft_mainactivity"
            android:layout_weight="1"
            android:text="@string/wallet_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20" />

        <ImageView
            android:id="@+id/abSettings"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:background="@color/action_bar_color"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/llSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            
            <ImageView
                android:id="@+id/ivSend"
                android:src="@drawable/send"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/ivHome"
                android:src="@drawable/home"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTransactions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/ivTransactions"
                android:src="@drawable/transaction"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tvTransactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions_small"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llReceive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/ivReceive"
                android:src="@drawable/receive"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tvReceive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/abActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <wallet.bitcoin.bitcoinwallet.helper.CustomViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/rlFee"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        android:background="#88000000">

        <LinearLayout
            android:id="@+id/bottom"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:paddingBottom="40dp"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/low"
                android:textSize="14dp"
                android:textColor="@color/fee_text"
                android:minHeight="0dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/fee_btn"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/optimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/optimal"
                android:textSize="14dp"
                android:textColor="@color/fee_text"
                android:layout_marginBottom="10dp"
                android:minHeight="0dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/fee_btn"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fast"
                android:textSize="14dp"
                android:textColor="@color/fee_text"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:minHeight="0dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/fee_btn"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvFee"
            android:layout_above="@id/bottom"
            android:text="@string/fee"
            android:textSize="18dp"
            android:background="@color/white"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivSendBtn"
        android:layout_below="@id/abActionBar"
        android:layout_marginTop="-24dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/send_btn_back"
        android:src="@drawable/ic_send_black_36dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerInside"
        android:elevation="15dp"
        android:layout_width="48dp"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/confirmSend"
        android:visibility="gone"
        android:layout_toLeftOf="@id/ivSendBtn"
        android:layout_alignTop="@id/ivSendBtn"
        android:text="@string/confirm_send"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:elevation="15dp"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="48dp" />

</RelativeLayout>
