<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_back"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingBottom="35dp"
        android:paddingTop="35dp">

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:text="Loading.."
            tools:text="0.00000023BTC" />

        <TextView
            android:id="@+id/tvBalanceInCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Loading.."
            tools:text="0.00000023BTC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/total_funds"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBalance"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/addresses"
            android:textColor="@color/text_color_light"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/sp16" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/llImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/action_btn"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/import_str"
                android:layout_marginRight="10dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp14" />

            <ImageView
                android:id="@+id/ivImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_import" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:background="@drawable/action_btn"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/add"
                android:layout_marginRight="10dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp14" />

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/add" />

        </LinearLayout>

    </LinearLayout>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:spb_colors="@array/gplus_colors"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="3"
        app:spb_progressiveStop_speed="6"
        app:spb_reversed="false"
        app:spb_sections_count="4"
        app:spb_speed="2.0"
        app:spb_stroke_separator_length="4dp"
        app:spb_stroke_width="4dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAddresses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_back"
        android:layout_below="@id/line" />

    <!--<RelativeLayout-->
    <!--android:id="@+id/rlProgress"-->
    <!--android:visibility="gone"-->
    <!--android:background="@color/pbBack"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<ProgressBar-->
    <!--android:id="@+id/pbProgress"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_width="44dp"-->
    <!--android:layout_height="44dp" />-->

    <!--</RelativeLayout>-->

</RelativeLayout>
